--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "svelte": "^3.52.0",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
